--- a/_config.yml
+++ b/_config.yml
@@ -78,6 +78,7 @@ category_map:
     技巧篇: tips
     配置篇: config
     前端篇: front
+    一些想法: a-little-thought
     
 tag_map:
     hexo起步: hexo-firstStep
@@ -94,6 +95,8 @@ tag_map:
     hexo同步: hexo_sync
     小技巧: taps
     笔记: read_note
+    想法: thought
+    启发: enlighten
     
 
 # Date / Time format
