--- a/_config.yml
+++ b/_config.yml
@@ -80,6 +80,8 @@ category_map:
     前端篇: front
     一些想法: a-little-thought
     虚拟机: virual-machine
+    微信小程序: miniProgram
+    基础: based
     
 tag_map:
     hexo起步: hexo-firstStep
@@ -98,7 +100,9 @@ tag_map:
     笔记: read_note
     想法: thought
     启发: enlighten
-    虚拟机: virual-machine
+    虚拟机: virual-machine 
+    微信小程序: miniProgram
+    基础: based
     
 
 # Date / Time format
