--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -37,7 +37,7 @@ root: /
 # 文章太长，截断按钮文字
 excerpt_link: more
 # 文章卡片右下角常驻链接，不需要请设置为false
-show_all_link: '展开'
+show_all_link: false
 # 数学公式
 mathjax: false
 # 是否在新窗口打开链接
@@ -136,4 +136,4 @@ friends:
   #友情链接5: http://localhost:4000/
   #友情链接6: http://localhost:4000/
 
-aboutme: 年纪轻轻的<br>什么不能学?<br>请多指教
+aboutme: 年纪轻轻的<br />什么不能学?<br />请多指教
