--- a/_config.yml
+++ b/_config.yml
@@ -84,6 +84,7 @@ category_map:
     微信小程序: miniProgram
     基础: based
     学习: learn
+    踩坑: pit
     
 tag_map:
     hexo起步: hexo-firstStep
@@ -105,6 +106,7 @@ tag_map:
     虚拟机: virual-machine 
     微信小程序: miniProgram
     基础: based
+    踩坑: pit
     
 
 # Date / Time format
