--- a/_config.yml
+++ b/_config.yml
@@ -89,6 +89,8 @@ category_map:
     积累: tips
     配置: config
     数据库: database
+    破解: heck
+    加密: encode
     
 tag_map:
     hexo起步: hexo-firstStep
@@ -111,6 +113,7 @@ tag_map:
     微信小程序: miniProgram
     基础: based
     踩坑: pit
+    加密: encode
     
 
 # Date / Time format
