--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -101,9 +101,12 @@ gitment_oauth:
   
  #6 valine
 valine:
-    valine_enable: true
+    valine_enable: false
     valine_appId: 'QkHG1EQvnsX9IrdUnH82axiJ-gzGzoHsz'
     valine_appKey: 'IlLClAXir5egASknIp6TK0zF'
+
+#7 livere
+livere_uid: MTAyMC80NTk5OC8yMjUwOQ==
 
 # 样式定制 - 一般不需要修改，除非有很强的定制欲望…
 style:
