--- a/_config.yml
+++ b/_config.yml
@@ -91,6 +91,7 @@ category_map:
     数据库: database
     破解: heck
     加密: encode
+    开发: develop
     
 tag_map:
     hexo起步: hexo-firstStep
@@ -114,6 +115,8 @@ tag_map:
     基础: based
     踩坑: pit
     加密: encode
+    开发笔记: develop_note
+    破解: heck
     
 
 # Date / Time format
