--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,8 @@ category_map:
     加密: encode
     开发: develop
     工具: tools
-    
+    移动开发: mobile
+
 tag_map:
     hexo起步: hexo-firstStep
     hexo插件: hexo-plugins
